--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "mongodb": "^2.2.31",
     "morgan": "~1.8.1",
     "node-sass-middleware": "^0.11.0",
     "pug": "~2.0.0-beta11",
